--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Dimitar Apostolovski
+tagline: themetar, *-developer
 description: >- # this means to ignore newlines until "baseurl:"
   Dimitar Apostolovski's personal website.
 baseurl: "" # the subpath of your site, e.g. /blog
