--- a/_data/web_presence.yml
+++ b/_data/web_presence.yml
@@ -2,5 +2,5 @@
   link: https://github.com/themetar
 - title: Exercism
   link: https://exercism.org/profiles/themetar
-- title: X (Twitter)
-  link: https://twitter.com/themetar
+- title: LinkedIn
+  link: https://www.linkedin.com/in/dimitar-apostolovski
